day23: finally solved